--- a/diversity.ipynb
+++ b/diversity.ipynb
@@ -989,22 +989,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "098654db-883c-4b4f-b113-17e98cd8f7cf",
-   "metadata": {},
-   "source": [
-    "Insect the Bray-Curtis dissimilarity PCoA plot: "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "cbd72785-505c-4417-98e3-d6031278bff1",
-   "metadata": {},
-   "source": [
-    "Plot doesn't look similar to the one in the exercise."
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "be06040d-c059-47fd-851b-ef17a22d9707",
    "metadata": {},
    "source": [
@@ -1338,7 +1322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 31,
    "id": "a797368d-385b-4c06-bcf0-2cfad1f0f57a",
    "metadata": {},
    "outputs": [
@@ -1375,13 +1359,13 @@
        "                        ' errors.';\n",
        "    }\n",
        "});\n",
-       "})(this.parentElement, '/qiime2/redirect?location=/tmp/qiime2-archive-mgpz4ef1')\" src=\"data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==\" /></div>"
+       "})(this.parentElement, '/qiime2/redirect?location=/tmp/qiime2-archive-ciy0zqey')\" src=\"data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==\" /></div>"
       ],
       "text/plain": [
        "<visualization: Visualization uuid: eb6b4a78-3b9f-4a21-a9ca-ee9fb333f9c6>"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1392,15 +1376,23 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8f58f849-13cf-4bd8-b9c8-4b6d44768896",
+   "id": "d522fbbc-ff87-4bca-9613-76fac6d464b9",
    "metadata": {},
    "source": [
-    "Different order in p-formula:"
+    "Order the columns by R2. The highest R2 comes first."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a77d758f-43d2-4587-8025-c9a041f7bd1d",
+   "metadata": {},
+   "source": [
+    "Result: The region explains the most variation in our dataset (highest R2 value). --> But where is \"continent\"? :("
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 35,
    "id": "26bec1c1-574e-4cc1-9b11-be0c4e725c20",
    "metadata": {},
    "outputs": [
@@ -1417,13 +1409,13 @@
     "! qiime diversity adonis \\\n",
     "    --i-distance-matrix $data_dir/core-metrics-results_insertion_1500/unweighted_unifrac_distance_matrix.qza \\\n",
     "    --m-metadata-file $data_dir/food-metadata.tsv \\\n",
-    "    --p-formula \"continent+country+region+animal_source+rindtype+pasteurized\" \\\n",
+    "    --p-formula \"region+rindtype+country+animal_source+continent+pasteurized\" \\\n",
     "    --o-visualization $data_dir/core-metrics-results_insertion_1500/adonis_neworder.qzv"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 36,
    "id": "59c964f4-18cf-46ea-9966-38484eb2766b",
    "metadata": {},
    "outputs": [
@@ -1460,13 +1452,13 @@
        "                        ' errors.';\n",
        "    }\n",
        "});\n",
-       "})(this.parentElement, '/qiime2/redirect?location=/tmp/qiime2-archive-rlrxt3ip')\" src=\"data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==\" /></div>"
+       "})(this.parentElement, '/qiime2/redirect?location=/tmp/qiime2-archive-fjbgzhl4')\" src=\"data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==\" /></div>"
       ],
       "text/plain": [
-       "<visualization: Visualization uuid: 85058335-46f8-4062-8d05-5a507ccbe954>"
+       "<visualization: Visualization uuid: c7175e1a-9814-41aa-91ed-682141544855>"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
