--- a/diversity.ipynb
+++ b/diversity.ipynb
@@ -1581,8 +1581,71 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "5bb807b8-a30d-415b-9da9-2f0b6b8c0e65",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'OrdinationResults' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Input \u001b[0;32mIn [12]\u001b[0m, in \u001b[0;36m<cell line: 2>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m unw_UF_pcoa_res \u001b[38;5;241m=\u001b[39m q2\u001b[38;5;241m.\u001b[39mArtifact\u001b[38;5;241m.\u001b[39mload(os\u001b[38;5;241m.\u001b[39mpath\u001b[38;5;241m.\u001b[39mjoin(data_dir, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mcore-metrics-results_insertion_1500/unweighted_unifrac_pcoa_results.qza\u001b[39m\u001b[38;5;124m'\u001b[39m))\n\u001b[0;32m----> 2\u001b[0m unw_UF_pcoa_res \u001b[38;5;241m=\u001b[39m unw_UF_pcoa_res\u001b[38;5;241m.\u001b[39mview(view_type \u001b[38;5;241m=\u001b[39m \u001b[43mOrdinationResults\u001b[49m)\n\u001b[1;32m      3\u001b[0m \u001b[38;5;66;03m# let's just take the first 3 columns (i.e., first 3 PCoA axes)\u001b[39;00m\n\u001b[1;32m      4\u001b[0m unw_UF_pcoa_res_data \u001b[38;5;241m=\u001b[39m pcs\u001b[38;5;241m.\u001b[39msamples\u001b[38;5;241m.\u001b[39miloc[:,:\u001b[38;5;241m3\u001b[39m]\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'OrdinationResults' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "unw_UF_pcoa_res = q2.Artifact.load(os.path.join(data_dir, 'core-metrics-results_insertion_1500/unweighted_unifrac_pcoa_results.qza'))\n",
+    "unw_UF_pcoa_res = unw_UF_pcoa_res.view(view_type = OrdinationResults)\n",
+    "# let's just take the first 3 columns (i.e., first 3 PCoA axes)\n",
+    "unw_UF_pcoa_res_data = pcs.samples.iloc[:,:3]\n",
+    "# rename the columns for clarity\n",
+    "unw_UF_pcoa_res_data.columns = ['Axis 1', 'Axis 2', 'Axis 3']\n",
+    "\n",
+    "#ordinationresults funktioniert nicht...."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9656aca6-a8dd-43bc-898a-ba0eb8ac2d9a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "unw_UF_pcoa_res_data.head(3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "21ec9887-066e-4c6c-a7d1-09aa08bf4211",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d2dcee81-22a5-411f-a08b-d033cc8f6b08",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "63835f60-fddb-4aac-befc-d7efc234325d",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5155c2b1-4015-4d12-adb1-c0288d4b0ee7",
    "metadata": {},
    "outputs": [],
    "source": []
