Note about filtering step

--- a/taxonomy.ipynb
+++ b/taxonomy.ipynb
@@ -536,7 +536,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#filter sequences and exclude mitochondria,chloroplast\n",
+    "#filter sequences and exclude the unassigned\n",
     "! qiime taxa filter-seqs \\\n",
     "--i-sequences $data_dir/dada2_rep_set.qza \\\n",
     "--i-taxonomy $data_dir/taxonomy_v4.qza \\\n",
@@ -588,7 +588,7 @@
    "source": [
     "#Sequence alignment\n",
     "! qiime alignment mafft \\\n",
-    "     --i-sequences $data_dir/dada2_rep_set_filtered2.qza \\\n",
+    "     --i-sequences $data_dir/dada2_rep_set_filtered.qza \\\n",
     "     --o-alignment $data_dir/aligned-rep-seqs.qza"
    ]
   },
