--- a/diversity.ipynb
+++ b/diversity.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "778b1329-4862-4b15-a1e3-7d32c814a170",
    "metadata": {},
    "outputs": [],
@@ -18,6 +18,7 @@
     "import os\n",
     "import pandas as pd\n",
     "from qiime2 import Visualization\n",
+    "from skbio import OrdinationResults\n",
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
     "\n",
@@ -206,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "id": "6bd5725e-1c42-41a1-9d9a-b1d65c17a733",
    "metadata": {},
    "outputs": [],
@@ -1581,50 +1582,189 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "id": "5bb807b8-a30d-415b-9da9-2f0b6b8c0e65",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'OrdinationResults' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Input \u001b[0;32mIn [12]\u001b[0m, in \u001b[0;36m<cell line: 2>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m unw_UF_pcoa_res \u001b[38;5;241m=\u001b[39m q2\u001b[38;5;241m.\u001b[39mArtifact\u001b[38;5;241m.\u001b[39mload(os\u001b[38;5;241m.\u001b[39mpath\u001b[38;5;241m.\u001b[39mjoin(data_dir, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mcore-metrics-results_insertion_1500/unweighted_unifrac_pcoa_results.qza\u001b[39m\u001b[38;5;124m'\u001b[39m))\n\u001b[0;32m----> 2\u001b[0m unw_UF_pcoa_res \u001b[38;5;241m=\u001b[39m unw_UF_pcoa_res\u001b[38;5;241m.\u001b[39mview(view_type \u001b[38;5;241m=\u001b[39m \u001b[43mOrdinationResults\u001b[49m)\n\u001b[1;32m      3\u001b[0m \u001b[38;5;66;03m# let's just take the first 3 columns (i.e., first 3 PCoA axes)\u001b[39;00m\n\u001b[1;32m      4\u001b[0m unw_UF_pcoa_res_data \u001b[38;5;241m=\u001b[39m pcs\u001b[38;5;241m.\u001b[39msamples\u001b[38;5;241m.\u001b[39miloc[:,:\u001b[38;5;241m3\u001b[39m]\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'OrdinationResults' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "unw_UF_pcoa_res = q2.Artifact.load(os.path.join(data_dir, 'core-metrics-results_insertion_1500/unweighted_unifrac_pcoa_results.qza'))\n",
-    "unw_UF_pcoa_res = unw_UF_pcoa_res.view(view_type = OrdinationResults)\n",
+    "unw_UF_pcoa_res = unw_UF_pcoa_res.view(OrdinationResults)\n",
     "# let's just take the first 3 columns (i.e., first 3 PCoA axes)\n",
-    "unw_UF_pcoa_res_data = pcs.samples.iloc[:,:3]\n",
+    "unw_UF_pcoa_res_data = unw_UF_pcoa_res.samples.iloc[:,:3]\n",
     "# rename the columns for clarity\n",
-    "unw_UF_pcoa_res_data.columns = ['Axis 1', 'Axis 2', 'Axis 3']\n",
-    "\n",
-    "#ordinationresults funktioniert nicht...."
+    "unw_UF_pcoa_res_data.columns = ['Axis 1', 'Axis 2', 'Axis 3']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "9656aca6-a8dd-43bc-898a-ba0eb8ac2d9a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Axis 1</th>\n",
+       "      <th>Axis 2</th>\n",
+       "      <th>Axis 3</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>11488.CSB280</th>\n",
+       "      <td>0.087019</td>\n",
+       "      <td>0.093183</td>\n",
+       "      <td>-0.277883</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11488.CSB281</th>\n",
+       "      <td>0.058403</td>\n",
+       "      <td>0.077159</td>\n",
+       "      <td>-0.274722</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11488.CSB282</th>\n",
+       "      <td>-0.046514</td>\n",
+       "      <td>0.078386</td>\n",
+       "      <td>-0.230340</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                Axis 1    Axis 2    Axis 3\n",
+       "11488.CSB280  0.087019  0.093183 -0.277883\n",
+       "11488.CSB281  0.058403  0.077159 -0.274722\n",
+       "11488.CSB282 -0.046514  0.078386 -0.230340"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "unw_UF_pcoa_res_data.head(3)"
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "f69e31d8-197e-4d13-adae-26c5d46620b1",
+   "metadata": {},
+   "source": [
+    "Join this dataframe with metadata column:"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "21ec9887-066e-4c6c-a7d1-09aa08bf4211",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Axis 1</th>\n",
+       "      <th>Axis 2</th>\n",
+       "      <th>Axis 3</th>\n",
+       "      <th>rindtype</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>11488.CSB280</th>\n",
+       "      <td>0.087019</td>\n",
+       "      <td>0.093183</td>\n",
+       "      <td>-0.277883</td>\n",
+       "      <td>natural</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11488.CSB281</th>\n",
+       "      <td>0.058403</td>\n",
+       "      <td>0.077159</td>\n",
+       "      <td>-0.274722</td>\n",
+       "      <td>natural</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11488.CSB282</th>\n",
+       "      <td>-0.046514</td>\n",
+       "      <td>0.078386</td>\n",
+       "      <td>-0.230340</td>\n",
+       "      <td>natural</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11488.CSB290</th>\n",
+       "      <td>0.221177</td>\n",
+       "      <td>-0.074665</td>\n",
+       "      <td>0.021040</td>\n",
+       "      <td>washed</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11488.CSB291</th>\n",
+       "      <td>0.264740</td>\n",
+       "      <td>-0.176029</td>\n",
+       "      <td>0.020379</td>\n",
+       "      <td>washed</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                Axis 1    Axis 2    Axis 3 rindtype\n",
+       "11488.CSB280  0.087019  0.093183 -0.277883  natural\n",
+       "11488.CSB281  0.058403  0.077159 -0.274722  natural\n",
+       "11488.CSB282 -0.046514  0.078386 -0.230340  natural\n",
+       "11488.CSB290  0.221177 -0.074665  0.021040   washed\n",
+       "11488.CSB291  0.264740 -0.176029  0.020379   washed"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "unw_UF_pcoa_res_data_with_rindtype = unw_UF_pcoa_res_data.join(df_meta['rindtype'])\n",
+    "unw_UF_pcoa_res_data_with_rindtype.head()"
+   ]
   },
   {
    "cell_type": "code",
